2000-11-08  John Sullivan  <sullivan@eazel.com>

	* libgnomevfs-pthread/gnome-vfs-job.c: (execute_find_directory):
	Changed a g_new to g_new0 to fix problem where result_item->uri
	was sometimes uninitialized. Darin somehow found this bug when
	I couldn't figure out why make check in Nautilus was crashing.
	Hooray!

2000-11-08  Ramiro Estrugo  <ramiro@eazel.com>

	* data/mime/gnome-vfs.applications:
	XMMS can open uris.
	
2000-11-06  Robin * Slomkowski  <rslomkow@eazel.com>

	* configure.in: upped development version to 0.4.2.0

2000-11-06  Robin * Slomkowski  <rslomkow@eazel.com>

	* configure.in: upped version to 0.4.2

2000-11-06  Robin * Slomkowski  <rslomkow@eazel.com>

	* configure.in:  upped version 0.4.1.1
	for internal incrimental release

2000-11-06  Darin Adler  <darin@eazel.com>

	Fix bug 4490 (web sites with bad last modified dates (like
	www.centerbeam.com) result in "not found").

	* modules/http-method.c: (create_handle): Change code so that
	headers that can't be parsed don't result in NOT_FOUND. They are
	instead ignored.
	
	* test/test-shell.c: (list_commands), (main): Fix some small
	problems in the test shell that I encountered while dealing with
	the bug.

2000-11-06  Maciej Stachowiak  <mjs@eazel.com>

	* data/mime/gnome-vfs.applications: Commented out entries for vi
	and lynx. This is the fix for 4468.

2000-11-06  Maciej Stachowiak  <mjs@eazel.com>

	* data/mime/gnome-vfs.applications, data/mime/gnome-vfs.keys: Some
	minor changes. Added Electric Eyes and made it the most preferred
	image viewer. Added ggv and made it more preferred than gv or
	ghostview for PDF viewing. Added proper entry for ogg123. Made
	mpg123 not require a terminal. Made mpg123 and xmms kmow that they
	handle secondary versions of various mime types. Made Acrobat the
	most preferred PDF viewer (if you've gone to the trouble of
	installing it, it's proably what you want). Changed editor
	preference order around a bit.

2000-11-05  Yukihiro Nakai  <nakai@gnome.gr.jp>
